--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,4 +1,12 @@
 {
   "item.tutorialmod.bismuth": "Bismuth",
-  "item.tutorialmod.raw_bismuth": "Raw_Bismuth"
+  "item.tutorialmod.raw_bismuth": "Raw_Bismuth",
+
+  "block.tutorialmod.bismuth_block": "Block of Bismuth",
+  "block.tutorialmod.bismuth_ore": "Bismuth Ore",
+  "block.tutorialmod.bismuth_deepslate_ore": "Bismuth Deepslate Ore",
+
+  "creativetab.tutorialmod.bismuth_items": "Bismuth Items",
+  "creativetab.tutorialmod.bismuth_blocks": "Bismuth Blocks"
+
 }
